feat:información extra

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias voluptatibus dicta soluta odit! Sapiente
         fugiat culpa nostrum libero odit esse itaque dolorum, officia consequuntur labore repellat ipsa maiores
         explicabo necessitatibus.</p>
+    <strong>Hola</strong>
+    <b>xDDD</b>
 </head>
 
 <body>
